optimize imports and reformat code